fixed a weird break on DSPACE Home on index page

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -34,7 +34,6 @@ header .navbar-default a {
   color: #333;
   text-decoration: none;
   position: relative;
-  padding: 5px;
 }
 
 header .navbar-default a:hover{
